Set up for 3 languages version

--- a/directions/index.html
+++ b/directions/index.html
@@ -53,17 +53,24 @@
         </tr>
     </table>
 
+    <h3 href="#section-ru">По русски</h3>
+    <h3 href="#section-fr">En français</h3>
+    <h3 href="#section-en">In English</h3>
 
-    <h2>Directions</h2>
+
+    <h2 id="section-ru">Как добраться до la Boutardière</h2>
     <p>
-        Here&rsquo;s where you can put directions to the conference,
-        and other information that will help attendees find the location,
-        and find the building, and register, and find local places they can stay, etc.
-        You can embed a <a href="https://www.google.com/maps">Google Maps</a> iframe
-        with directions to the conference like a did below.
-        It can also be helpful to include maps of the campus itself,
-        or pictures of the building the conference will be held in.
-        I&rsquo;ve opted to use a placeholder image of a kitten below.
+        La Boutardière находится в 2 часах езды на машине от Парижа, в 6 часах езды от Марселя, в 1 часе езды от Bourges, в 30 минутах езды от Vierzon, в 20 минутах езды от Châteauroux, в 15 минутах езды от Issoudun и в 12 минутах езды от la Greletterie. В 1 км от скоростной дороги A20, выход 11. На поезде ближайшие и наиболее доступные станции - Vierzon, Châteauroux и Issoudun.
+    </p>
+
+    <h2 id="section-fr">Venir à la Boutardière</h2>
+    <p>
+        La Boutardière se situe à 2 heures et demie de voiture de Paris, 6 heures et demie de voiture de Marseille, 1h de voiture de Bourges, 30 minutes en voiture de Vierzon, 20 minutes de voiture de Châteauroux, 15 minutes de voiture d'Issoudun, 12 minutes de voiture de la Greletterie. À 1 km de l’autoroute A20, sortie n°11. En train, les gares les plus proches et les plus accessibles sont celles de Vierzon, Châteauroux, Issoudun.
+    </p>
+
+    <h2 id="section-en">Coming to La Boutardière</h2>
+    <p>
+        La Boutardière is 2.5 hours by car from Paris, 6.5 hours by car from Marseille, 1 hour by car from Bourges, 30 minutes by car from Vierzon, 20 minutes by car from Châteauroux, 15 minutes by car from Issoudun, 12 minutes by car from La Greletterie. 1 km from the A20 freeway, exit 11. By train, the nearest and most accessible stations are Vierzon, Châteauroux and Issoudun.
     </p>
 
     <iframe class="directions" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2723.5308184951!2d1.7686423763612982!3d46.95125973300195!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47fb0fc17496b4f5%3A0xce625e00c8b4221c!2sLa%20Boutardi%C3%A8re%2C%2036100%20La%20Champenoise!5e0!3m2!1sen!2sfr!4v1727717382158!5m2!1sen!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
