--- a/program/index.html
+++ b/program/index.html
@@ -175,8 +175,7 @@
         </tr>
         <tr>
             <td class="abstract">
-                Que vous aimiez vos décibels nombreux et clinquants ou précieux et doux, nous vous souhaitons chaussure et salle à votre pied.
-            </td>
+                Любите вы децибелы громкие и яркие или мягкие и малочисленные, мы надеемся, что вы найдете то, что вам подойдет.            </td>
         </tr>
     </table>
 
@@ -187,12 +186,12 @@
                 11:00
             </td>
             <td class="title-special">
-                Brunch et discutaille
+                Brunch и болтовня
             </td>
         </tr>
         <tr>
             <td class="abstract">
-                On s'occupe du brunch et avec un peu de chance, le reste viendra !
+                Мы позаботимся о еде, а остальное, если повезет, придет само!
             </td>
         </tr>
     </table>
@@ -203,12 +202,12 @@
                 15:00
             </td>
             <td class="title">
-                Soirée de rangement festive
+                Уборочная вечеринка
             </td>
         </tr>
         <tr>
             <td class="abstract">
-               L'ambiance sera présente, les serpillères et le lave vaisselle aussi.
+                Пусть будет настроение, швабры и посудомоечная машина!
             </td>
         </tr>
     </table>
