--- a/home-ru/index.html
+++ b/home-ru/index.html
@@ -2,9 +2,9 @@
 <html lang='en'>
 
 <head>
-    <base href=".">
-    <link rel="shortcut icon" type="image/png" href="assets/favicon.png"/>
-    <link rel="stylesheet" type="text/css" media="all" href="assets/main.css"/>
+    <base href="..">
+    <link rel="shortcut icon" type="image/png" href="./assets/favicon.png"/>
+    <link rel="stylesheet" type="text/css" media="all" href="./assets/main.css"/>
     <meta name="description" content="Свадебная конференция | Conférence de mariage | Wedding conference">
     <meta name="resource-type" content="document">
     <meta name="distribution" content="global">
@@ -35,31 +35,30 @@
 
     <table class="navigation">
         <tr>
-    <!--        <td class="navigation">
+            <td class="navigation">
                 <a class="current" title="Главная страница конференции | Page d'accueil de la conférence | Conference Home Page" href=".">Главная | Accueil | Home</a>
-            </td> -->
-            <td class="navigation">
-                <a title="Главная страница конференции" href="home-ru/">По русски</a>
             </td>
             <td class="navigation">
-                <a title="Page d'accueil de la conférence" href="home-fr/">En français</a> 
+                <a title="Register for the Conference" href="registration">Запись | Inscription | Registration</a>
             </td>
             <td class="navigation">
-                <a title="Conference Home Page" href="home-en/">In English</a>
+                <a title="Conference Program" href="program"> Программа | Programme | Program</a> 
             </td>
-<!--            <td class="navigation">
+            <td class="navigation">
+                <a title="Directions to the Conference" href="directions">Расположение | Lieu | Venue</a>
+            </td>
+            <td class="navigation">
                 <a title="Conference Flyer" href="flyer">Flyer</a>
             </td>
             <td class="navigation">
                 <a title="Ressources" href="ressources">Материалы | Ressources | Resources</a>
-            </td> -->
+            </td>
         </tr>
     </table>
 
-    <!-- 
     <h1 href="#section-ru">По русски</h1>
     <h1 href="#section-fr">En français</h1>
-    <h1 href="#section-en">In English</h1>-->
+    <h1 href="#section-en">In English</h1>
 
 
     <h2 id="section-ru">Добро пожаловать!</h2>
