French part of graph

--- a/home-fr/index.html
+++ b/home-fr/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang='en'>
+<html lang='fr'>
 
 <head>
     <base href="..">
@@ -29,51 +29,52 @@
             <span class="title1">ODD</span><span class="title2">TALE</span> <span class="year">2025</span>
         </div>
         <div class="bottom-right">
-            Onirical Delights of Draco-Teaological Approaches to Life Entanglement <br> May 31, 2025 <br> La Boutardière, 36100 La Champenoise, France 
+            Délices Oniriques des Approches Draco-Théologiques à l'Intrication des Vies <br> May 31, 2025 <br> La Boutardière, 36100 La Champenoise, France 
         </div>
     </div>
 
     <table class="navigation">
         <tr>
             <td class="navigation">
-                <a class="current" title="Главная страница конференции | Page d'accueil de la conférence | Conference Home Page" href=".">Главная | Accueil | Home</a>
+                <a class="current" title="Page d'accueil de la conférence" href=".">Accueil</a>
             </td>
             <td class="navigation">
-                <a title="Register for the Conference" href="registration">Запись | Inscription | Registration</a>
+                <a title="Inscription à la conférence" href="registration-fr">Inscription</a>
             </td>
             <td class="navigation">
-                <a title="Conference Program" href="program"> Программа | Programme | Program</a> 
+                <a title="Programme de la conférence" href="program-fr">Programme</a> 
             </td>
             <td class="navigation">
-                <a title="Directions to the Conference" href="directions">Расположение | Lieu | Venue</a>
+                <a title="Venir à la Boutardière" href="directions-fr">Lieu</a>
             </td>
             <td class="navigation">
                 <a title="Conference Flyer" href="flyer">Flyer</a>
             </td>
             <td class="navigation">
-                <a title="Ressources" href="ressources">Материалы | Ressources | Resources</a>
+                <a title="Ressources" href="ressources-fr">Ressources</a>
             </td>
         </tr>
     </table>
-
+<!--
     <h1 href="#section-ru">По русски</h1>
     <h1 href="#section-fr">En français</h1>
-    <h1 href="#section-en">In English</h1>
+    <h1 href="#section-en">In English</h1>-->
 
-
+<!--
     <h2 id="section-ru">Добро пожаловать!</h2>
     <p>
         0-й международный симпозиум Мечтательные Наслаждения Драконо-Чайных Подходов к Жизненным Переплетениям (ODDTALE 2025) состоится 31 мая 2025 года в La Boutardière, 36100 La Champenoise, Франция. 
-    </p>
+    </p> -->
     <h2 id="section-fr">Bienvenue !</h2>
     <p>
         Le 0ème symposium international sur les Délices Oniriques des Approches Draco-Théologiques à l'Intrication des Vies (ODDTALE 2025) aura lieu à La Boutardière, 36100 La Champenoise, France, le 31 mai 2025. 
     </p>
+<!--
     <h2 id="section-en">Welcome!</h2>
     <p>
        The 0th international symposium on Onirical Delights of Draco-Teaological Approaches to Life Entanglement (ODDTALE 2025) will take place at La Boutardière, 36100 La Champenoise, France on May 31st, 2025. 
     </p>
-    <p>
+    <p>  -->
 <!--
 
     <p>
