VF registration + form

--- a/registration-fr/index.html
+++ b/registration-fr/index.html
@@ -9,7 +9,7 @@
     <meta name="resource-type" content="document">
     <meta name="distribution" content="global">
     <meta name="KeyWords" content="Conference">
-    <title>Registration | ODDTALE 2025</title>
+    <title>Inscription | ODDTALE 2025</title>
     <style>
         img {
           width: 100%;
@@ -26,17 +26,40 @@
             <span class="title1">ODD</span><span class="title2">TALE</span> <span class="year">2025</span>
         </div>
         <div class="bottom-right">
-            Onirical Delights of Draco-Teaological Approaches to Life Entanglement <br> May 31, 2025 <br> La Boutardière, 36100 La Champenoise, France 
+            Délices Oniriques des Approches Draco-Théologiques à l'Intrication des Vies <br> 31 Mai 2025 <br> La Boutardière, 36100 La Champenoise, France 
         </div>
     </div>
 
     <table class="navigation">
         <tr>
             <td class="navigation">
-                <a title="Conference Home Page" href=".">Home</a>
+                <a title="Page d'accueil de la conférence" href=".">Accueil</a>
             </td>
             <td class="navigation">
-                <a class="current" title="Register for the Conference" href="registration">Registration</a>
+                <a class="current" title="Inscription à la conférence" href="registration-fr">Inscription</a>
+            </td>
+            <td class="navigation">
+                <a title="Programme de la conférence" href="program-fr">Programme</a> 
+            </td>
+            <td class="navigation">
+                <a title="Venir à la Boutardière" href="directions-fr">Lieu</a>
+            </td>
+            <td class="navigation">
+                <a title="Conference Flyer" href="flyer">Flyer</a>
+            </td>
+            <td class="navigation">
+                <a title="Ressources" href="ressources-fr">Ressources</a>
+            </td>
+        </tr>
+    </table>
+<!--
+    <table class="navigation">
+        <tr>
+            <td class="navigation">
+                <a title="Page d'accueil de la conférence" href=".">Accueil</a>
+            </td>
+            <td class="navigation">
+                <a class="current" title="Inscription à la conférence" href="registration-fr">Registration</a>
             </td>
             <td class="navigation">
                 <a title="Conference Program" href="program">Program</a> 
@@ -51,13 +74,9 @@
                 <a title="Ressources" href="ressources">Ressources</a>
             </td>
         </tr>
-    </table>
+    </table> -->
 
     <br>
-
-    <p>
-        Bla bla bla enregistrement.
-    </p>
 
     <iframe class="registration" src="https://framaforms.org/participation-a-oddtale-2025-1727635332" width="100%" height="1800" border="0"></iframe>
     <!--
