Added retro-nav in FR

--- a/home-fr/index.html
+++ b/home-fr/index.html
@@ -29,7 +29,7 @@
             <span class="title1">ODD</span><span class="title2">TALE</span> <span class="year">2025</span>
         </div>
         <div class="bottom-right">
-            Délices Oniriques des Approches Draco-Théologiques à l'Intrication des Vies <br> May 31, 2025 <br> La Boutardière, 36100 La Champenoise, France 
+            Délices Oniriques des Approches Draco-Théologiques à l'Intrication des Vies <br> 31 Mai 2025 <br> La Boutardière, 36100 La Champenoise, France 
         </div>
     </div>
 
