--- a/program-fr/index.html
+++ b/program-fr/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang='en'>
+<html lang='fr'>
 
 <head>
     <base href="..">
@@ -12,7 +12,7 @@
     <meta name="resource-type" content="document">
     <meta name="distribution" content="global">
     <meta name="KeyWords" content="Conference">
-    <title>Program | ODDTALE 2025</title>
+    <title>Programme | ODDTALE 2025</title>
     <style>
         img {
           width: 100%;
@@ -29,188 +29,37 @@
             <span class="title1">ODD</span><span class="title2">TALE</span> <span class="year">2025</span>
         </div>
         <div class="bottom-right">
-            Onirical Delights of Draco-Teaological Approaches to Life Entanglement <br> May 31, 2025 <br> La Boutardière, 36100 La Champenoise, France 
+            Délices Oniriques des Approches Draco-Théologiques à l'Intrication des Vies <br> 31 Mai 2025 <br> La Boutardière, 36100 La Champenoise, France 
         </div>
     </div>
 
     <table class="navigation">
         <tr>
             <td class="navigation">
-                <a title="Conference Home Page" href=".">Home</a>
+                <a title="Page d'accueil de la conférence" href="../home-fr/">Accueil</a>
             </td>
             <td class="navigation">
-                <a title="Register for the Conference" href="registration">Registration</a>
+                <a title="Inscription à la conférence" href="registration-fr">Inscription</a>
             </td>
             <td class="navigation">
-                <a class="current" title="Conference Program" href="program">Program</a> 
+                <a class="current" title="Programme de la conférence" href="program-fr">Programme</a> 
             </td>
             <td class="navigation">
-                <a title="Directions to the Conference" href="directions">Directions</a>
+                <a title="Venir à la Boutardière" href="directions-fr">Lieu</a>
             </td>
             <td class="navigation">
                 <a title="Conference Flyer" href="flyer">Flyer</a>
             </td>
             <td class="navigation">
-                <a title="Ressources" href="ressources">Ressources</a>
+                <a title="Ressources" href="ressources-fr">Ressources</a>
             </td>
         </tr>
     </table>
 
+    <!--
     <h3 href="#section-ru">По русски</h3>
     <h3 href="#section-fr">En français</h3>
-    <h3 href="#section-en">In English</h3>
-
-    <h2 id="section-ru"> ODDTALE 2025 --  Программа </h2>
-
-    <h3>Суббота 31 мая</h3>
-    <table>
-        <tr>
-            <td class="date" rowspan="2">
-                13.30 - 14.30
-            </td>
-            <td class="title-special">
-                Приветствие
-            </td>
-        </tr>
-        <tr>
-            <td class="abstract">
-                Приветствие, распределение мест в общежитии и палаточных участков, обустройство на месте. 
-            </td>
-        </tr>
-    </table>
-
-    <table>
-        <tr>
-            <td class="date" rowspan="3">
-                14.30 - 15.30
-            </td>
-            <td class="title">
-                Сбор
-            </td>
-        </tr>
-        <tr>
-            <td class="abstract">
-                Готовьте свои голосовые связки, а мы подготовим слова! Подробнее см. в разделе Ресурсы.
-            </td>
-        </tr>
-    </table>
-
-    <table class="plenary">
-        <tr>
-            <td class="date" rowspan="3">
-                15.30 - 17.00
-            </td>
-            <td class="title">
-                Приглашенный доклад
-            </td> 
-        </tr>
-   <!--      <tr>
-            <td class="speaker">
-                Speaker Name (University)
-            </td> -->
-        </tr> 
-        <tr>
-            <td class="abstract">
-                Заклинание и немного горячей воды, несколько историй спустя - произойдет ли переплетение?
-            </td>
-        </tr>
-    </table>
-
-    <table>
-        <tr>
-            <td class="date" rowspan="3">
-                17:00 - 18:00
-            </td>
-            <td class="title-special">
-                Торжественный чай
-            </td>
-        </tr>
-        <tr>
-            <td class="abstract">
-                В честь приглашенных, в честь события, за радость разделить его с вами.
-            </td>
-        </tr>
-    </table>
-
-    <table>
-        <tr>
-            <td class="date" rowspan="3">
-                18:00 - 20:00
-            </td>
-            <td class="title">
-                Большой поединок и маленький танцевальный вечер
-            </td>
-        </tr>
-        <tr>
-            <td class="abstract">
-                Несколько мечей, кусочек тролля - всё, что нужно, чтобы размять большие и маленькие ноги! А если импровизация вас не вдохновляет, загляните в Ресурсы.
-            </td>
-        </tr>
-    </table>
-
-    <table>
-        <tr>
-            <td class="date" rowspan="2">
-                20:00
-            </td>
-            <td class="title-special">
-                Начало трапезы
-            </td>
-        </tr>
-        <tr>
-            <td class="abstract">
-                Это будет шведский стол, и ингредиенты будут объяснены, насколько это возможно. Не забудьте сообщить нам о любых непереносимостях, аллергиях или диетических требованиях в формуляре регистрации!
-            </td>
-        </tr>
-    </table>
-
-    <table>
-        <tr>
-            <td class="date" rowspan="2">
-                22:00
-            </td>
-            <td class="title">
-                Начало танцевальной вечеринки (бум) и игрового вечера (не бум)
-            </td>
-        </tr>
-        <tr>
-            <td class="abstract">
-                Любите вы децибелы громкие и яркие или мягкие и малочисленные, мы надеемся, что вы найдете то, что вам подойдет.            </td>
-        </tr>
-    </table>
-
-    <h3>Воскресенье 1 июня</h3>
-    <table>
-        <tr>
-            <td class="date" rowspan="2">
-                11:00
-            </td>
-            <td class="title-special">
-                Brunch и болтовня
-            </td>
-        </tr>
-        <tr>
-            <td class="abstract">
-                Мы позаботимся о еде, а остальное, если повезет, придет само!
-            </td>
-        </tr>
-    </table>
-
-    <table>
-        <tr>
-            <td class="date" rowspan="2">
-                15:00
-            </td>
-            <td class="title">
-                Уборочная вечеринка
-            </td>
-        </tr>
-        <tr>
-            <td class="abstract">
-                Пусть будет настроение, швабры и посудомоечная машина!
-            </td>
-        </tr>
-    </table>
+    <h3 href="#section-en">In English</h3> -->
 
     <h2 id="section-fr"> ODDTALE 2025 -- Programme </h2>
 
@@ -375,159 +224,6 @@ Dimanche :
         <tr>
             <td class="abstract">
                L'ambiance sera présente, les serpillères et le lave vaisselle aussi.
-            </td>
-        </tr>
-    </table>
-
-    <h2 id="section-en"> ODDTALE 2025 -- Program </h2>
-
-    <h3>Saturday, May 31</h3>
-    <table>
-        <tr>
-            <td class="date" rowspan="2">
-                1:30 - 2:30 p.m.
-            </td>
-            <td class="title-special">
-               Welcome
-            </td>
-        </tr>
-        <tr>
-            <td class="abstract">
-                Welcome, distribution of dormitories and tent sites, on-site installation. 
-            </td>
-        </tr>
-    </table>
-
-    <table>
-        <tr>
-            <td class="date" rowspan="3">
-                2:30 - 3:30 p.m.
-            </td>
-            <td class="title">
-                Gathering
-            </td>
-        </tr>
-        <tr>
-            <td class="abstract">
-                Prepare your voices and your pronunciations, we're providing the lyrics! See Resources for more details.
-            </td>
-        </tr>
-    </table>
-
-    <table class="plenary">
-        <tr>
-            <td class="date" rowspan="3">
-                3:30 - 5:00 p.m.
-            </td>
-            <td class="title">
-                Keynote 
-            </td> 
-        </tr>
-   <!--      <tr>
-            <td class="speaker">
-                Speaker Name (University)
-            </td> -->
-        </tr> 
-        <tr>
-            <td class="abstract">
-                A summoning, some hot water, a few stories later, will the entanglement take place?
-            </td>
-        </tr>
-    </table>
-
-    <table>
-        <tr>
-            <td class="date" rowspan="3">
-                5:00 - 6:00 p.m.
-            </td>
-            <td class="title-special">
-                Tea d'honneur
-            </td>
-        </tr>
-        <tr>
-            <td class="abstract">
-                To honor the guests, to honor of the event, to the pleasure of sharing it with you.
-            </td>
-        </tr>
-    </table>
-
-    <table>
-        <tr>
-            <td class="date" rowspan="3">
-                18:00 - 20:00 p.m.
-            </td>
-            <td class="title">
-                Great joust and little dance party
-            </td>
-        </tr>
-        <tr>
-            <td class="abstract">
-                A few swords, a small piece of troll, enough to stretch legs both big and small! If improvisation doesn't suit you, take a look at our Resources.            
-            </td>
-        </tr>
-    </table>
-
-    <table>
-        <tr>
-            <td class="date" rowspan="2">
-                20:00 p.m.
-            </td>
-            <td class="title-special">
-                Beginning of the feast
-            </td>
-        </tr>
-        <tr>
-            <td class="abstract">
-                It will be a buffet, with ingredients explained as much as possible. Don't forget to specify any intolerances, allergies or dietary requirements on the entry form!            
-            </td>
-        </tr>
-    </table>
-
-    <table>
-        <tr>
-            <td class="date" rowspan="2">
-                22:00 p.m.
-            </td>
-            <td class="title">
-                Start of dance party (boom) & games night (no boom)
-            </td>
-        </tr>
-        <tr>
-            <td class="abstract">
-                Whether you like your decibels numerous and flashy or precious and soft, we wish you just the right happening and the right room.
-            </td>
-        </tr>
-    </table>
-
-    <h3>Sunday, June 1</h3>
-    <table>
-        <tr>
-            <td class="date" rowspan="2">
-                11:00 p.m.
-            </td>
-            <td class="title-special">
-                Brunch and conversation
-            </td>
-        </tr>
-        <tr>
-            <td class="abstract">
-                We'll take care of the brunch, and hopefully the rest will follow!
-            </td>
-        </tr>
-    </table>
-
-    <table>
-        <tr>
-            <td class="date" rowspan="2">
-                15:00 p.m.
-            </td>
-            <td class="title">
-                Celebratory tidy-up party
-            </td>
-        </tr>
-        <tr>
-            <td class="abstract">
-                The mood will be there, and so will the mops and dishwasher.
             </td>
         </tr>
     </table>
