VE home + navigation

--- a/home-fr/index.html
+++ b/home-fr/index.html
@@ -36,7 +36,7 @@
     <table class="navigation">
         <tr>
             <td class="navigation">
-                <a class="current" title="Page d'accueil de la conférence" href=".">Accueil</a>
+                <a class="current" title="Choix des langues" href=".">Langues</a>
             </td>
             <td class="navigation">
                 <a title="Inscription à la conférence" href="registration-fr">Inscription</a>
