--- a/ressources-fr/index.html
+++ b/ressources-fr/index.html
@@ -33,7 +33,7 @@
     <table class="navigation">
         <tr>
             <td class="navigation">
-                <a title="Page d'accueil de la conférence" href=".">Accueil</a>
+                <a title="Page d'accueil de la conférence" href="../home-fr/">Accueil</a>
             </td>
             <td class="navigation">
                 <a title="Inscription à la conférence" href="registration-fr">Inscription</a>
