--- a/registration-en/index.html
+++ b/registration-en/index.html
@@ -33,7 +33,7 @@
     <table class="navigation">
         <tr>
             <td class="navigation">
-                <a title="Conference Home Page" href=".">Home</a>
+                <a title="Conference Home Page" href="../home-en/">Home</a>
             </td>
             <td class="navigation">
                 <a class="current" title="Register for the Conference" href="registration">Registration</a>
@@ -48,22 +48,17 @@
                 <a title="Conference Flyer" href="flyer">Flyer</a>
             </td>
             <td class="navigation">
-                <a title="Ressources" href="ressources">Ressources</a>
+                <a title="Resources" href="ressources">Resources</a>
             </td>
         </tr>
     </table>
 
     <br>
 
-    <p>
-        Bla bla bla enregistrement.
-    </p>
-
-    <iframe class="registration" src="https://framaforms.org/participation-a-oddtale-2025-1727635332" width="100%" height="1800" border="0"></iframe>
+    <iframe class="registration" src="https://framaforms.org/registration-to-oddtale-2025-1728152077" width="100%" height="1800" border="0"></iframe>
     <!--
     <iframe class="registration" src="EMBED LINK FOR GOOGLE FORM HERE"></iframe>
-    -->
-    
+    -->    
 
     <footer>
         &copy; Caritchev
