--- a/registration-en/index.html
+++ b/registration-en/index.html
@@ -36,19 +36,19 @@
                 <a title="Conference Home Page" href="../home-en/">Home</a>
             </td>
             <td class="navigation">
-                <a class="current" title="Register for the Conference" href="registration">Registration</a>
+                <a class="current" title="Register for the Conference" href="registration-en">Registration</a>
             </td>
             <td class="navigation">
-                <a title="Conference Program" href="program">Program</a> 
+                <a title="Conference Program" href="program-en">Program</a> 
             </td>
             <td class="navigation">
-                <a title="Directions to the Conference" href="directions">Directions</a>
+                <a title="Directions to the Conference" href="directions-en">Directions</a>
             </td>
             <td class="navigation">
                 <a title="Conference Flyer" href="flyer">Flyer</a>
             </td>
             <td class="navigation">
-                <a title="Resources" href="ressources">Resources</a>
+                <a title="Resources" href="ressources-en">Resources</a>
             </td>
         </tr>
     </table>
