--- a/program-en/index.html
+++ b/program-en/index.html
@@ -36,345 +36,22 @@
     <table class="navigation">
         <tr>
             <td class="navigation">
-                <a title="Conference Home Page" href=".">Home</a>
+                <a title="Conference Home Page" href="../home-en/">Home</a>
             </td>
             <td class="navigation">
-                <a title="Register for the Conference" href="registration">Registration</a>
+                <a title="Register for the Conference" href="registration-en">Registration</a>
             </td>
             <td class="navigation">
-                <a class="current" title="Conference Program" href="program">Program</a> 
+                <a class="current" title="Conference Program" href="program-en">Program</a> 
             </td>
             <td class="navigation">
-                <a title="Directions to the Conference" href="directions">Directions</a>
+                <a title="Directions to the Conference" href="directions-en">Directions</a>
             </td>
             <td class="navigation">
                 <a title="Conference Flyer" href="flyer">Flyer</a>
             </td>
             <td class="navigation">
-                <a title="Ressources" href="ressources">Ressources</a>
-            </td>
-        </tr>
-    </table>
-
-    <h3 href="#section-ru">По русски</h3>
-    <h3 href="#section-fr">En français</h3>
-    <h3 href="#section-en">In English</h3>
-
-    <h2 id="section-ru"> ODDTALE 2025 --  Программа </h2>
-
-    <h3>Суббота 31 мая</h3>
-    <table>
-        <tr>
-            <td class="date" rowspan="2">
-                13.30 - 14.30
-            </td>
-            <td class="title-special">
-                Приветствие
-            </td>
-        </tr>
-        <tr>
-            <td class="abstract">
-                Приветствие, распределение мест в общежитии и палаточных участков, обустройство на месте. 
-            </td>
-        </tr>
-    </table>
-
-    <table>
-        <tr>
-            <td class="date" rowspan="3">
-                14.30 - 15.30
-            </td>
-            <td class="title">
-                Сбор
-            </td>
-        </tr>
-        <tr>
-            <td class="abstract">
-                Готовьте свои голосовые связки, а мы подготовим слова! Подробнее см. в разделе Ресурсы.
-            </td>
-        </tr>
-    </table>
-
-    <table class="plenary">
-        <tr>
-            <td class="date" rowspan="3">
-                15.30 - 17.00
-            </td>
-            <td class="title">
-                Приглашенный доклад
-            </td> 
-        </tr>
-   <!--      <tr>
-            <td class="speaker">
-                Speaker Name (University)
-            </td> -->
-        </tr> 
-        <tr>
-            <td class="abstract">
-                Заклинание и немного горячей воды, несколько историй спустя - произойдет ли переплетение?
-            </td>
-        </tr>
-    </table>
-
-    <table>
-        <tr>
-            <td class="date" rowspan="3">
-                17:00 - 18:00
-            </td>
-            <td class="title-special">
-                Торжественный чай
-            </td>
-        </tr>
-        <tr>
-            <td class="abstract">
-                В честь приглашенных, в честь события, за радость разделить его с вами.
-            </td>
-        </tr>
-    </table>
-
-    <table>
-        <tr>
-            <td class="date" rowspan="3">
-                18:00 - 20:00
-            </td>
-            <td class="title">
-                Большой поединок и маленький танцевальный вечер
-            </td>
-        </tr>
-        <tr>
-            <td class="abstract">
-                Несколько мечей, кусочек тролля - всё, что нужно, чтобы размять большие и маленькие ноги! А если импровизация вас не вдохновляет, загляните в Ресурсы.
-            </td>
-        </tr>
-    </table>
-
-    <table>
-        <tr>
-            <td class="date" rowspan="2">
-                20:00
-            </td>
-            <td class="title-special">
-                Начало трапезы
-            </td>
-        </tr>
-        <tr>
-            <td class="abstract">
-                Это будет шведский стол, и ингредиенты будут объяснены, насколько это возможно. Не забудьте сообщить нам о любых непереносимостях, аллергиях или диетических требованиях в формуляре регистрации!
-            </td>
-        </tr>
-    </table>
-
-    <table>
-        <tr>
-            <td class="date" rowspan="2">
-                22:00
-            </td>
-            <td class="title">
-                Начало танцевальной вечеринки (бум) и игрового вечера (не бум)
-            </td>
-        </tr>
-        <tr>
-            <td class="abstract">
-                Любите вы децибелы громкие и яркие или мягкие и малочисленные, мы надеемся, что вы найдете то, что вам подойдет.            </td>
-        </tr>
-    </table>
-
-    <h3>Воскресенье 1 июня</h3>
-    <table>
-        <tr>
-            <td class="date" rowspan="2">
-                11:00
-            </td>
-            <td class="title-special">
-                Brunch и болтовня
-            </td>
-        </tr>
-        <tr>
-            <td class="abstract">
-                Мы позаботимся о еде, а остальное, если повезет, придет само!
-            </td>
-        </tr>
-    </table>
-
-    <table>
-        <tr>
-            <td class="date" rowspan="2">
-                15:00
-            </td>
-            <td class="title">
-                Уборочная вечеринка
-            </td>
-        </tr>
-        <tr>
-            <td class="abstract">
-                Пусть будет настроение, швабры и посудомоечная машина!
-            </td>
-        </tr>
-    </table>
-
-    <h2 id="section-fr"> ODDTALE 2025 -- Programme </h2>
-
-<!--    Programme du mariage :
-Samedi :
-13h30-14h30 : accueil des invité-e-s
-14h30-15h30 : rassemblement
-15h30-17h : conférence invitée/keynote
-17h-18h : thé d'honneur
-18h-20h : grande joute et petite soirée dansante
-20h : début du repas
-22h : début de la soirée dansante (boum)
-
-Dimanche :
-11h : brunch et discutaille
-15h : soirée de rangement festive  -->
-
-    <h3>Samedi 31 mai</h3>
-    <table>
-        <tr>
-            <td class="date" rowspan="2">
-                13h30-14h30
-            </td>
-            <td class="title-special">
-                Accueil
-            </td>
-        </tr>
-        <tr>
-            <td class="abstract">
-                Accueil, distribution des dortoirs et emplacements des tentes, installation sur place. 
-            </td>
-        </tr>
-    </table>
-
-    <table>
-        <tr>
-            <td class="date" rowspan="3">
-                14h30-15h30
-            </td>
-            <td class="title">
-                Rassemblement
-            </td>
-        </tr>
-        <tr>
-            <td class="abstract">
-                Préparez vos voix et vos élocutions, on prévoit les cartons ! Voir Ressources pour plus de détails.
-            </td>
-        </tr>
-    </table>
-
-    <table class="plenary">
-        <tr>
-            <td class="date" rowspan="3">
-                15h30-17h
-            </td>
-            <td class="title">
-                Conférence invitée/keynote
-            </td> 
-        </tr>
-   <!--      <tr>
-            <td class="speaker">
-                Speaker Name (University)
-            </td> -->
-        </tr> 
-        <tr>
-            <td class="abstract">
-                Une invocation et de l'eau chaude, quelques histoires plus tard, l'intrication aura-t-elle lieu ?
-            </td>
-        </tr>
-    </table>
-
-    <table>
-        <tr>
-            <td class="date" rowspan="3">
-                17h-18h 
-            </td>
-            <td class="title-special">
-                Thé d'honneur
-            </td>
-        </tr>
-        <tr>
-            <td class="abstract">
-                En l'honneur des personnes invitées, en l'honneur de l'occasion, au plaisir de la partager avec vous.
-            </td>
-        </tr>
-    </table>
-
-    <table>
-        <tr>
-            <td class="date" rowspan="3">
-                18h-20h
-            </td>
-            <td class="title">
-                Grande joute et petite soirée dansante
-            </td>
-        </tr>
-        <tr>
-            <td class="abstract">
-                Quelques épées, un bout de troll, de quoi dégourdir de petites et grandes jambes ! Si l'improvisation ne vous inspire pas, venez-donc voir dans les Ressources.
-            </td>
-        </tr>
-    </table>
-
-    <table>
-        <tr>
-            <td class="date" rowspan="2">
-                20h
-            </td>
-            <td class="title-special">
-                Début du repas
-            </td>
-        </tr>
-        <tr>
-            <td class="abstract">
-                Ce sera un buffet, les ingrédients seront explicités autant que possible. N'oubliez pas de nous préciser toute intolérance, allergie, ou régime alimentaire dans le formulaire de participation !
-            </td>
-        </tr>
-    </table>
-
-    <table>
-        <tr>
-            <td class="date" rowspan="2">
-                22h
-            </td>
-            <td class="title">
-                Début de la soirée dansante (boum) & de la soirée ludique (pas boum)
-            </td>
-        </tr>
-        <tr>
-            <td class="abstract">
-                Que vous aimiez vos décibels nombreux et clinquants ou précieux et doux, nous vous souhaitons chaussure et salle à votre pied.
-            </td>
-        </tr>
-    </table>
-
-    <h3>Dimanche 1 juin</h3>
-    <table>
-        <tr>
-            <td class="date" rowspan="2">
-                11h
-            </td>
-            <td class="title-special">
-                Brunch et discutaille
-            </td>
-        </tr>
-        <tr>
-            <td class="abstract">
-                On s'occupe du brunch et avec un peu de chance, le reste viendra !
-            </td>
-        </tr>
-    </table>
-
-    <table>
-        <tr>
-            <td class="date" rowspan="2">
-                15h
-            </td>
-            <td class="title">
-                Soirée de rangement festive
-            </td>
-        </tr>
-        <tr>
-            <td class="abstract">
-               L'ambiance sera présente, les serpillères et le lave vaisselle aussi.
+                <a title="Resources" href="ressources-en">Resources</a>
             </td>
         </tr>
     </table>
