VR registration + nav

--- a/home-ru/index.html
+++ b/home-ru/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang='en'>
+<html lang='ru'>
 
 <head>
     <base href="..">
@@ -39,19 +39,19 @@
                 <a class="current" title="Выбор языка" href=".">Языки</a>
             </td>
             <td class="navigation">
-                <a title="Записаться на конференцию" href="registration">Запись</a>
+                <a title="Записаться на конференцию" href="registration-ru">Запись</a>
             </td>
             <td class="navigation">
-                <a title="Программа конференции" href="program">Программа</a> 
+                <a title="Программа конференции" href="program-ru">Программа</a> 
             </td>
             <td class="navigation">
-                <a title="Как добраться до конференции" href="directions">Расположение</a>
+                <a title="Как добраться до конференции" href="directions-ru">Расположение</a>
             </td>
             <td class="navigation">
                 <a title="Conference Flyer" href="flyer">Flyer</a>
             </td>
             <td class="navigation">
-                <a title="Материалы" href="ressources">Материалы</a>
+                <a title="Материалы" href="ressources-ru">Материалы</a>
             </td>
         </tr>
     </table>
