--- a/registration-ru/index.html
+++ b/registration-ru/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang='en'>
+<html lang='ru'>
 
 <head>
     <base href="..">
@@ -9,7 +9,7 @@
     <meta name="resource-type" content="document">
     <meta name="distribution" content="global">
     <meta name="KeyWords" content="Conference">
-    <title>Registration | ODDTALE 2025</title>
+    <title>Запись | ODDTALE 2025</title>
     <style>
         img {
           width: 100%;
@@ -26,40 +26,34 @@
             <span class="title1">ODD</span><span class="title2">TALE</span> <span class="year">2025</span>
         </div>
         <div class="bottom-right">
-            Onirical Delights of Draco-Teaological Approaches to Life Entanglement <br> May 31, 2025 <br> La Boutardière, 36100 La Champenoise, France 
+            Мечтательные Наслаждения Драконо-Чайных Подходов к Жизненным Переплетениям <br> 31 мая 2025 <br> La Boutardière, 36100 La Champenoise, France 
         </div>
     </div>
 
     <table class="navigation">
         <tr>
             <td class="navigation">
-                <a title="Conference Home Page" href=".">Home</a>
+                <a title="Главная" href=".">Главная</a>
             </td>
             <td class="navigation">
-                <a class="current" title="Register for the Conference" href="registration">Registration</a>
+                <a class="current" title="Записаться на конференцию" href="registration-ru">Запись</a>
             </td>
             <td class="navigation">
-                <a title="Conference Program" href="program">Program</a> 
+                <a title="Программа конференции" href="program-ru">Программа</a> 
             </td>
             <td class="navigation">
-                <a title="Directions to the Conference" href="directions">Directions</a>
+                <a title="Как добраться до конференции" href="directions-ru">Расположение</a>
             </td>
             <td class="navigation">
                 <a title="Conference Flyer" href="flyer">Flyer</a>
             </td>
             <td class="navigation">
-                <a title="Ressources" href="ressources">Ressources</a>
+                <a title="Материалы" href="ressources-ru">Материалы</a>
             </td>
         </tr>
     </table>
 
-    <br>
-
-    <p>
-        Bla bla bla enregistrement.
-    </p>
-
-    <iframe class="registration" src="https://framaforms.org/participation-a-oddtale-2025-1727635332" width="100%" height="1800" border="0"></iframe>
+    <iframe class="registration" src="https://framaforms.org/uchastie-v-oddtale-2025-1728151808" width="100%" height="1800" border="0"></iframe>
     <!--
     <iframe class="registration" src="EMBED LINK FOR GOOGLE FORM HERE"></iframe>
     -->
