--- a/program-ru/index.html
+++ b/program-ru/index.html
@@ -12,7 +12,7 @@
     <meta name="resource-type" content="document">
     <meta name="distribution" content="global">
     <meta name="KeyWords" content="Conference">
-    <title>Program | ODDTALE 2025</title>
+    <title>Программа | ODDTALE 2025</title>
     <style>
         img {
           width: 100%;
@@ -29,36 +29,32 @@
             <span class="title1">ODD</span><span class="title2">TALE</span> <span class="year">2025</span>
         </div>
         <div class="bottom-right">
-            Onirical Delights of Draco-Teaological Approaches to Life Entanglement <br> May 31, 2025 <br> La Boutardière, 36100 La Champenoise, France 
+            Мечтательные Наслаждения Драконо-Чайных Подходов к Жизненным Переплетениям <br> 31 мая 2025 <br> La Boutardière, 36100 La Champenoise, France 
         </div>
     </div>
 
     <table class="navigation">
         <tr>
             <td class="navigation">
-                <a title="Conference Home Page" href=".">Home</a>
+                <a title="Выбор языка" href="../home-ru/">Главная</a>
             </td>
             <td class="navigation">
-                <a title="Register for the Conference" href="registration">Registration</a>
+                <a title="Записаться на конференцию" href="registration-ru">Запись</a>
             </td>
             <td class="navigation">
-                <a class="current" title="Conference Program" href="program">Program</a> 
+                <a class="current" title="Программа конференции" href="program-ru">Программа</a> 
             </td>
             <td class="navigation">
-                <a title="Directions to the Conference" href="directions">Directions</a>
+                <a title="Как добраться до конференции" href="directions-ru">Расположение</a>
             </td>
             <td class="navigation">
                 <a title="Conference Flyer" href="flyer">Flyer</a>
             </td>
             <td class="navigation">
-                <a title="Ressources" href="ressources">Ressources</a>
+                <a title="Материалы" href="ressources-ru">Материалы</a>
             </td>
         </tr>
     </table>
-
-    <h3 href="#section-ru">По русски</h3>
-    <h3 href="#section-fr">En français</h3>
-    <h3 href="#section-en">In English</h3>
 
     <h2 id="section-ru"> ODDTALE 2025 --  Программа </h2>
 
@@ -212,325 +208,6 @@
         </tr>
     </table>
 
-    <h2 id="section-fr"> ODDTALE 2025 -- Programme </h2>
-
-<!--    Programme du mariage :
-Samedi :
-13h30-14h30 : accueil des invité-e-s
-14h30-15h30 : rassemblement
-15h30-17h : conférence invitée/keynote
-17h-18h : thé d'honneur
-18h-20h : grande joute et petite soirée dansante
-20h : début du repas
-22h : début de la soirée dansante (boum)
-
-Dimanche :
-11h : brunch et discutaille
-15h : soirée de rangement festive  -->
-
-    <h3>Samedi 31 mai</h3>
-    <table>
-        <tr>
-            <td class="date" rowspan="2">
-                13h30-14h30
-            </td>
-            <td class="title-special">
-                Accueil
-            </td>
-        </tr>
-        <tr>
-            <td class="abstract">
-                Accueil, distribution des dortoirs et emplacements des tentes, installation sur place. 
-            </td>
-        </tr>
-    </table>
-
-    <table>
-        <tr>
-            <td class="date" rowspan="3">
-                14h30-15h30
-            </td>
-            <td class="title">
-                Rassemblement
-            </td>
-        </tr>
-        <tr>
-            <td class="abstract">
-                Préparez vos voix et vos élocutions, on prévoit les cartons ! Voir Ressources pour plus de détails.
-            </td>
-        </tr>
-    </table>
-
-    <table class="plenary">
-        <tr>
-            <td class="date" rowspan="3">
-                15h30-17h
-            </td>
-            <td class="title">
-                Conférence invitée/keynote
-            </td> 
-        </tr>
-   <!--      <tr>
-            <td class="speaker">
-                Speaker Name (University)
-            </td> -->
-        </tr> 
-        <tr>
-            <td class="abstract">
-                Une invocation et de l'eau chaude, quelques histoires plus tard, l'intrication aura-t-elle lieu ?
-            </td>
-        </tr>
-    </table>
-
-    <table>
-        <tr>
-            <td class="date" rowspan="3">
-                17h-18h 
-            </td>
-            <td class="title-special">
-                Thé d'honneur
-            </td>
-        </tr>
-        <tr>
-            <td class="abstract">
-                En l'honneur des personnes invitées, en l'honneur de l'occasion, au plaisir de la partager avec vous.
-            </td>
-        </tr>
-    </table>
-
-    <table>
-        <tr>
-            <td class="date" rowspan="3">
-                18h-20h
-            </td>
-            <td class="title">
-                Grande joute et petite soirée dansante
-            </td>
-        </tr>
-        <tr>
-            <td class="abstract">
-                Quelques épées, un bout de troll, de quoi dégourdir de petites et grandes jambes ! Si l'improvisation ne vous inspire pas, venez-donc voir dans les Ressources.
-            </td>
-        </tr>
-    </table>
-
-    <table>
-        <tr>
-            <td class="date" rowspan="2">
-                20h
-            </td>
-            <td class="title-special">
-                Début du repas
-            </td>
-        </tr>
-        <tr>
-            <td class="abstract">
-                Ce sera un buffet, les ingrédients seront explicités autant que possible. N'oubliez pas de nous préciser toute intolérance, allergie, ou régime alimentaire dans le formulaire de participation !
-            </td>
-        </tr>
-    </table>
-
-    <table>
-        <tr>
-            <td class="date" rowspan="2">
-                22h
-            </td>
-            <td class="title">
-                Début de la soirée dansante (boum) & de la soirée ludique (pas boum)
-            </td>
-        </tr>
-        <tr>
-            <td class="abstract">
-                Que vous aimiez vos décibels nombreux et clinquants ou précieux et doux, nous vous souhaitons chaussure et salle à votre pied.
-            </td>
-        </tr>
-    </table>
-
-    <h3>Dimanche 1 juin</h3>
-    <table>
-        <tr>
-            <td class="date" rowspan="2">
-                11h
-            </td>
-            <td class="title-special">
-                Brunch et discutaille
-            </td>
-        </tr>
-        <tr>
-            <td class="abstract">
-                On s'occupe du brunch et avec un peu de chance, le reste viendra !
-            </td>
-        </tr>
-    </table>
-
-    <table>
-        <tr>
-            <td class="date" rowspan="2">
-                15h
-            </td>
-            <td class="title">
-                Soirée de rangement festive
-            </td>
-        </tr>
-        <tr>
-            <td class="abstract">
-               L'ambiance sera présente, les serpillères et le lave vaisselle aussi.
-            </td>
-        </tr>
-    </table>
-
-    <h2 id="section-en"> ODDTALE 2025 -- Program </h2>
-
-    <h3>Saturday, May 31</h3>
-    <table>
-        <tr>
-            <td class="date" rowspan="2">
-                1:30 - 2:30 p.m.
-            </td>
-            <td class="title-special">
-               Welcome
-            </td>
-        </tr>
-        <tr>
-            <td class="abstract">
-                Welcome, distribution of dormitories and tent sites, on-site installation. 
-            </td>
-        </tr>
-    </table>
-
-    <table>
-        <tr>
-            <td class="date" rowspan="3">
-                2:30 - 3:30 p.m.
-            </td>
-            <td class="title">
-                Gathering
-            </td>
-        </tr>
-        <tr>
-            <td class="abstract">
-                Prepare your voices and your pronunciations, we're providing the lyrics! See Resources for more details.
-            </td>
-        </tr>
-    </table>
-
-    <table class="plenary">
-        <tr>
-            <td class="date" rowspan="3">
-                3:30 - 5:00 p.m.
-            </td>
-            <td class="title">
-                Keynote 
-            </td> 
-        </tr>
-   <!--      <tr>
-            <td class="speaker">
-                Speaker Name (University)
-            </td> -->
-        </tr> 
-        <tr>
-            <td class="abstract">
-                A summoning, some hot water, a few stories later, will the entanglement take place?
-            </td>
-        </tr>
-    </table>
-
-    <table>
-        <tr>
-            <td class="date" rowspan="3">
-                5:00 - 6:00 p.m.
-            </td>
-            <td class="title-special">
-                Tea d'honneur
-            </td>
-        </tr>
-        <tr>
-            <td class="abstract">
-                To honor the guests, to honor of the event, to the pleasure of sharing it with you.
-            </td>
-        </tr>
-    </table>
-
-    <table>
-        <tr>
-            <td class="date" rowspan="3">
-                18:00 - 20:00 p.m.
-            </td>
-            <td class="title">
-                Great joust and little dance party
-            </td>
-        </tr>
-        <tr>
-            <td class="abstract">
-                A few swords, a small piece of troll, enough to stretch legs both big and small! If improvisation doesn't suit you, take a look at our Resources.            
-            </td>
-        </tr>
-    </table>
-
-    <table>
-        <tr>
-            <td class="date" rowspan="2">
-                20:00 p.m.
-            </td>
-            <td class="title-special">
-                Beginning of the feast
-            </td>
-        </tr>
-        <tr>
-            <td class="abstract">
-                It will be a buffet, with ingredients explained as much as possible. Don't forget to specify any intolerances, allergies or dietary requirements on the entry form!            
-            </td>
-        </tr>
-    </table>
-
-    <table>
-        <tr>
-            <td class="date" rowspan="2">
-                22:00 p.m.
-            </td>
-            <td class="title">
-                Start of dance party (boom) & games night (no boom)
-            </td>
-        </tr>
-        <tr>
-            <td class="abstract">
-                Whether you like your decibels numerous and flashy or precious and soft, we wish you just the right happening and the right room.
-            </td>
-        </tr>
-    </table>
-
-    <h3>Sunday, June 1</h3>
-    <table>
-        <tr>
-            <td class="date" rowspan="2">
-                11:00 p.m.
-            </td>
-            <td class="title-special">
-                Brunch and conversation
-            </td>
-        </tr>
-        <tr>
-            <td class="abstract">
-                We'll take care of the brunch, and hopefully the rest will follow!
-            </td>
-        </tr>
-    </table>
-
-    <table>
-        <tr>
-            <td class="date" rowspan="2">
-                15:00 p.m.
-            </td>
-            <td class="title">
-                Celebratory tidy-up party
-            </td>
-        </tr>
-        <tr>
-            <td class="abstract">
-                The mood will be there, and so will the mops and dishwasher.
-            </td>
-        </tr>
-    </table>
 
     <footer>
         &copy; Caritchev
