--- a/ressources-ru/index.html
+++ b/ressources-ru/index.html
@@ -33,7 +33,7 @@
     <table class="navigation">
         <tr>
             <td class="navigation">
-                <a title="Главная страница" href="../home-ru/">Главная</a>
+                <a title="Главная страница" href="./home-ru/">Главная</a>
             </td>
             <td class="navigation">
                 <a title="Записаться на конференцию" href="registration-ru">Запись</a>
