--- a/registration-ru/index.html
+++ b/registration-ru/index.html
@@ -33,7 +33,7 @@
     <table class="navigation">
         <tr>
             <td class="navigation">
-                <a title="Главная" href=".">Главная</a>
+                <a title="Главная" href="./home-ru/">Главная</a>
             </td>
             <td class="navigation">
                 <a class="current" title="Записаться на конференцию" href="registration-ru">Запись</a>
