--- a/directions-ru/index.html
+++ b/directions-ru/index.html
@@ -33,7 +33,7 @@
     <table class="navigation">
         <tr>
             <td class="navigation">
-                <a title="Главная страница" href="../home-ru/">Главная</a>
+                <a title="Главная страница" href="./home-ru/">Главная</a>
             </td>
             <td class="navigation">
                 <a title="Записаться на конференцию" href="registration-ru">Запись</a>
@@ -45,10 +45,10 @@
                 <a class="current" title="Как добраться до конференции" href="directions-ru">Расположение</a>
             </td>
             <td class="navigation">
-                <a title="Conference Flyer" href="flyer">Flyer</a>
+                <a title="Материалы" href="ressources-ru">Материалы</a>
             </td>
             <td class="navigation">
-                <a title="Материалы" href="ressources-ru">Материалы</a>
+                <a title="Conference Flyer" href="flyer">Flyer</a>
             </td>
         </tr>
     </table>
