--- a/program-ru/index.html
+++ b/program-ru/index.html
@@ -36,7 +36,7 @@
     <table class="navigation">
         <tr>
             <td class="navigation">
-                <a title="Выбор языка" href="../home-ru/">Главная</a>
+                <a title="Выбор языка" href="./home-ru/">Главная</a>
             </td>
             <td class="navigation">
                 <a title="Записаться на конференцию" href="registration-ru">Запись</a>
@@ -48,10 +48,10 @@
                 <a title="Как добраться до конференции" href="directions-ru">Расположение</a>
             </td>
             <td class="navigation">
-                <a title="Conference Flyer" href="flyer">Flyer</a>
+                <a title="Материалы" href="ressources-ru">Материалы</a>
             </td>
             <td class="navigation">
-                <a title="Материалы" href="ressources-ru">Материалы</a>
+                <a title="Conference Flyer" href="flyer">Flyer</a>
             </td>
         </tr>
     </table>
