--- a/ressources-ru/index.html
+++ b/ressources-ru/index.html
@@ -47,9 +47,9 @@
             <td class="navigation">
                 <a class="current" title="Материалы" href="ressources-ru">Материалы</a>
             </td>
-            <td class="navigation">
+ <!--           <td class="navigation">
                 <a title="Conference Flyer" href="flyer">Flyer</a>
-            </td>
+            </td> -->
         </tr>
     </table>
 
