--- a/home-fr/index.html
+++ b/home-fr/index.html
@@ -48,11 +48,11 @@
                 <a title="Venir à la Boutardière" href="directions-fr">Lieu</a>
             </td>
             <td class="navigation">
-                <a title="Conference Flyer" href="flyer">Flyer</a>
-            </td>
-            <td class="navigation">
                 <a title="Ressources" href="ressources-fr">Ressources</a>
             </td>
+<!--            <td class="navigation">
+                <a title="Conference Flyer" href="flyer">Flyer</a>
+            </td> -->
         </tr>
     </table>
 <!--
