--- a/program-fr/index.html
+++ b/program-fr/index.html
@@ -36,7 +36,7 @@
     <table class="navigation">
         <tr>
             <td class="navigation">
-                <a title="Page d'accueil de la conférence" href="../home-fr/">Accueil</a>
+                <a title="Page d'accueil de la conférence" href="./home-fr/">Accueil</a>
             </td>
             <td class="navigation">
                 <a title="Inscription à la conférence" href="registration-fr">Inscription</a>
@@ -48,11 +48,11 @@
                 <a title="Venir à la Boutardière" href="directions-fr">Lieu</a>
             </td>
             <td class="navigation">
-                <a title="Conference Flyer" href="flyer">Flyer</a>
-            </td>
-            <td class="navigation">
                 <a title="Ressources" href="ressources-fr">Ressources</a>
             </td>
+<!--            <td class="navigation">
+                <a title="Conference Flyer" href="flyer">Flyer</a>
+            </td> -->
         </tr>
     </table>
 
