Updated nav -en

--- a/ressources-en/index.html
+++ b/ressources-en/index.html
@@ -33,7 +33,7 @@
     <table class="navigation">
         <tr>
             <td class="navigation">
-                <a title="Conference Home Page" href="../home-en/">Home</a>
+                <a title="Conference Home Page" href="./home-en/">Home</a>
             </td>
             <td class="navigation">
                 <a title="Register for the Conference" href="registration-en">Registration</a>
@@ -45,11 +45,11 @@
                 <a title="Directions to the Conference" href="directions-en">Directions</a>
             </td>
             <td class="navigation">
-                <a title="Conference Flyer" href="flyer">Flyer</a>
-            </td>
-            <td class="navigation">
                 <a class="current" title="Ressources" href="ressources-en">Ressources</a>
             </td>
+   <!--         <td class="navigation">
+                <a title="Conference Flyer" href="flyer">Flyer</a>
+            </td> -->
         </tr>
     </table>
 
