--- a/home-en/index.html
+++ b/home-en/index.html
@@ -48,11 +48,11 @@
                 <a title="Directions to the Conference" href="directions-en">Venue</a>
             </td>
             <td class="navigation">
-                <a title="Conference Flyer" href="flyer">Flyer</a>
-            </td>
-            <td class="navigation">
                 <a title="Resources" href="ressources-en">Resources</a>
             </td>
+   <!--         <td class="navigation">
+                <a title="Conference Flyer" href="flyer">Flyer</a>
+            </td> -->
         </tr>
     </table>
 
