--- a/program-en/index.html
+++ b/program-en/index.html
@@ -36,7 +36,7 @@
     <table class="navigation">
         <tr>
             <td class="navigation">
-                <a title="Conference Home Page" href="../home-en/">Home</a>
+                <a title="Conference Home Page" href="./home-en/">Home</a>
             </td>
             <td class="navigation">
                 <a title="Register for the Conference" href="registration-en">Registration</a>
@@ -48,11 +48,11 @@
                 <a title="Directions to the Conference" href="directions-en">Directions</a>
             </td>
             <td class="navigation">
-                <a title="Conference Flyer" href="flyer">Flyer</a>
-            </td>
-            <td class="navigation">
                 <a title="Resources" href="ressources-en">Resources</a>
             </td>
+   <!--         <td class="navigation">
+                <a title="Conference Flyer" href="flyer">Flyer</a>
+            </td> -->
         </tr>
     </table>
 
