--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
 
     <div class="banner">
-        <img title="LucasD, CC BY-SA 4.0 &lt;https://creativecommons.org/licenses/by-sa/4.0&gt;, via Wikimedia Commons" href="https://commons.wikimedia.org/wiki/File:Champagne_berrichonne.jpg"><img width="512" alt="Champagne berrichonne" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/36/Champagne_berrichonne.jpg/512px-Champagne_berrichonne.jpg?20170617104352" alt="Conference Template Banner">
+        <img src="assets/berry-amea.jpg" alt="Champagne berrichonne" width="512">
  <!--       <img src="assets/banner.jpg" alt="Conference Template Banner">-->
         <div class="top-left">
             <span class="title1">ODD</span><span class="title2">TALE</span> <span class="year">2025</span>
