--- a/directions-fr/index.html
+++ b/directions-fr/index.html
@@ -67,6 +67,9 @@
     <img class="center" src="assets/kitten4.jpg" alt="This is just a kitten right now" id="kitten">
 -->
 
+<img src="assets/ragondin-amea.jpg" alt="Ragondin berrichon">
+
+
     <footer>
         &copy; Caritchev
         &nbsp;|&nbsp; Design by <a href="https://github.com/mikepierce">Mike Pierce</a>
