Added sanglier + moved ragondin

--- a/directions-en/index.html
+++ b/directions-en/index.html
@@ -63,7 +63,7 @@
 
     <iframe class="directions" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2723.5308184951!2d1.7686423763612982!3d46.95125973300195!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47fb0fc17496b4f5%3A0xce625e00c8b4221c!2sLa%20Boutardi%C3%A8re%2C%2036100%20La%20Champenoise!5e0!3m2!1sen!2sfr!4v1727717382158!5m2!1sen!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
-    <img src="assets/ragondin-amea.jpg" alt="Ragondin berrichon">
+    <img src="assets/sangliers-amea.jpg" alt="Sanglier berrichon">
 
     <footer>
         &copy; Caritchev
