--- a/directions-fr/index.html
+++ b/directions-fr/index.html
@@ -67,7 +67,7 @@
     <img class="center" src="assets/kitten4.jpg" alt="This is just a kitten right now" id="kitten">
 -->
 
-<img src="assets/ragondin-amea.jpg" alt="Ragondin berrichon">
+<img src="assets/sangliers-amea.jpg" alt="Sanglier berrichon">
 
 
     <footer>
