--- a/home-fr/index.html
+++ b/home-fr/index.html
@@ -117,6 +117,9 @@
         </tr>
     </table> -->
 
+    <img src="assets/ragondin-amea.jpg" alt="Ragondin berrichon">
+
+
     <footer>
         &copy; Caritchev
         &nbsp;|&nbsp; Design by <a href="https://github.com/mikepierce">Mike Pierce</a>
