--- a/home-en/index.html
+++ b/home-en/index.html
@@ -103,6 +103,8 @@
         </tr>
     </table> -->
 
+    <img src="assets/ragondin-amea.jpg" alt="Ragondin berrichon">
+
     <footer>
         &copy; Caritchev
         &nbsp;|&nbsp; Design by <a href="https://github.com/mikepierce">Mike Pierce</a>
