--- a/program-en/index.html
+++ b/program-en/index.html
@@ -56,7 +56,8 @@
         </tr>
     </table>
 
-    <h2 id="section-en"> ODDTALE 2025 -- Program </h2>
+<!--
+    <h2 id="section-en"> Program </h2> -->
 
     <h3>Saturday, May 31</h3>
     <table>
