Removed program title

--- a/program-fr/index.html
+++ b/program-fr/index.html
@@ -60,8 +60,8 @@
     <h3 href="#section-ru">По русски</h3>
     <h3 href="#section-fr">En français</h3>
     <h3 href="#section-en">In English</h3> -->
-
-    <h2 id="section-fr"> ODDTALE 2025 -- Programme </h2>
+<!--
+    <h2 id="section-fr"> ODDTALE 2025 -- Programme </h2>-->
 
 <!--    Programme du mariage :
 Samedi :
