--- a/program-ru/index.html
+++ b/program-ru/index.html
@@ -56,7 +56,8 @@
         </tr>
     </table>
 
-    <h2 id="section-ru"> ODDTALE 2025 --  Программа </h2>
+<!--
+    <h2 id="section-ru"> ODDTALE 2025 --  Программа </h2>-->
 
     <h3>Суббота 31 мая</h3>
     <table>
