--- a/directions-en/index.html
+++ b/directions-en/index.html
@@ -45,7 +45,7 @@
                 <a class="current" title="Directions to the Conference" href="directions-en">Directions</a>
             </td>
             <td class="navigation">
-                <a title="Ressources" href="ressources-en">Ressources</a>
+                <a title="Ressources" href="ressources-en">Resources</a>
             </td>
   <!--          <td class="navigation">
                 <a title="Conference Flyer" href="flyer">Flyer</a>
