--- a/ressources-en/index.html
+++ b/ressources-en/index.html
@@ -45,7 +45,7 @@
                 <a title="Directions to the Conference" href="directions-en">Directions</a>
             </td>
             <td class="navigation">
-                <a class="current" title="Ressources" href="ressources-en">Ressources</a>
+                <a class="current" title="Ressources" href="ressources-en">Resources</a>
             </td>
    <!--         <td class="navigation">
                 <a title="Conference Flyer" href="flyer">Flyer</a>
