Corrected typo -ru

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <a class="current" title="Главная страница конференции | Page d'accueil de la conférence | Conference Home Page" href=".">Главная | Accueil | Home</a>
             </td> -->
             <td class="navigation">
-                <a title="Главная страница конференции" href="home-ru/">По русски</a>
+                <a title="Главная страница конференции" href="home-ru/">По-русски</a>
             </td>
             <td class="navigation">
                 <a title="Page d'accueil de la conférence" href="home-fr/">En français</a> 
