Added animals warning

--- a/directions-fr/index.html
+++ b/directions-fr/index.html
@@ -67,6 +67,10 @@
     <img class="center" src="assets/kitten4.jpg" alt="This is just a kitten right now" id="kitten">
 -->
 
+<p>
+    Malheureusement, comme il y a déjà des animaux sur place, les autres animaux ne sont pas admis à La Boutardière.
+</p> 
+
 <img src="assets/sangliers-amea.jpg" alt="Sanglier berrichon">
 
 
